--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="card-group" onclick="clickCards()">
+    <div class="card-group" onclick="clickCards()" data-status="inactive">
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
