--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="card-group" onclick="clickCards()" data-status="inactive">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card"><img src="./public/1650258246639276040.gif" /></div>
+      <div class="card"><img src="./public/1649986454163161090.gif" /></div>
+      <div class="card"><img src="./public/1650439443369566210.gif" /></div>
+      <div class="card"><img src="./public/1650484748719128579.gif" /></div>
     </div>
     <script src="index.js"></script>
   </body>
