--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -13,6 +13,14 @@
       <div class="card"><img src="./public/1649986454163161090.gif" /></div>
       <div class="card"><img src="./public/1650439443369566210.gif" /></div>
       <div class="card"><img src="./public/1650484748719128579.gif" /></div>
+
+      <div
+        class="gif"
+        style="
+          --animation-name: gif;
+          --frame-0: url(./public/1650258246639276040.gif);
+        "
+      ></div>
     </div>
     <script src="index.js"></script>
   </body>
