changed img/gifs to video/mp4

--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -9,18 +9,32 @@
   </head>
   <body>
     <div class="card-group" onclick="clickCards()" data-status="inactive">
-      <div class="card"><img src="./public/1650258246639276040.gif" /></div>
-      <div class="card"><img src="./public/1649986454163161090.gif" /></div>
-      <div class="card"><img src="./public/1650439443369566210.gif" /></div>
-      <div class="card"><img src="./public/1650484748719128579.gif" /></div>
-
-      <div
-        class="gif"
-        style="
-          --animation-name: gif;
-          --frame-0: url(./public/1650258246639276040.gif);
-        "
-      ></div>
+      <div class="card">
+        <video autoplay loop>
+          <source src="./public/ezgif.com-gif-to-mp4.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <div class="card">
+        <video autoplay loop>
+          <source src="./public/ezgif-5-6de031032e.mp4" type="video/mp4" />
+        </video>
+      </div>
+      <div class="card">
+        <video autoplay loop>
+          <source
+            src="./public/ezgif.com-gif-to-mp4 (1).mp4"
+            type="video/mp4"
+          />
+        </video>
+      </div>
+      <div class="card">
+        <video autoplay loop>
+          <source
+            src="./public/ezgif.com-gif-to-mp4 (2).mp4"
+            type="video/mp4"
+          />
+        </video>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
