--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -10,17 +10,17 @@
   <body>
     <div class="card-group" onclick="clickCards()" data-status="inactive">
       <div class="card">
-        <video autoplay loop>
+        <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
           <source src="./public/ezgif.com-gif-to-mp4.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="card">
-        <video autoplay loop>
+        <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
           <source src="./public/ezgif-5-6de031032e.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="card">
-        <video autoplay loop>
+        <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
           <source
             src="./public/ezgif.com-gif-to-mp4 (1).mp4"
             type="video/mp4"
@@ -28,7 +28,7 @@
         </video>
       </div>
       <div class="card">
-        <video autoplay loop>
+        <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
           <source
             src="./public/ezgif.com-gif-to-mp4 (2).mp4"
             type="video/mp4"
