--- a/first-cards/index.html
+++ b/first-cards/index.html
@@ -11,7 +11,7 @@
     <div class="card-group" onclick="clickCards()" data-status="inactive">
       <div class="card">
         <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
-          <source src="./public/ezgif.com-gif-to-mp4.mp4" type="video/mp4" />
+          <source src="./public/1651722903174381568 (3).mp4" type="video/mp4" />
         </video>
       </div>
       <div class="card">
@@ -22,17 +22,14 @@
       <div class="card">
         <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
           <source
-            src="./public/ezgif.com-gif-to-mp4 (1).mp4"
+            src="./public/ezgif.com-gif-to-mp4 (2).mp4"
             type="video/mp4"
           />
         </video>
       </div>
       <div class="card">
         <video loop onmouseover="playVid(this)" onmouseout="stopVid(this)">
-          <source
-            src="./public/ezgif.com-gif-to-mp4 (2).mp4"
-            type="video/mp4"
-          />
+          <source src="./public/1652605459831074817.mp4" type="video/mp4" />
         </video>
       </div>
     </div>
